@@ -1,3 +1,9 @@
+Sun Apr 21 21:18:21 2002  Tim Janik  <timj@gtk.org>
+
+	* bseadder.[hc]: implement input channels as jstreams.
+
+	* bsemixer.[hc]: slight cleanups.
+
 Tue Apr 16 08:24:53 2002  Tim Janik  <timj@gtk.org>
 
 	* bsesnooper.[hc]: remove this module from plugins.
